--- a/index.html
+++ b/index.html
@@ -1,19 +1,178 @@
-<!doctype html>
-<title>Site Maintenance</title>
-<style>
-  body { text-align: center; padding: 150px; }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+
+    <meta charset="utf-8">
+
+    
+
+    <title>laxmimahara</title>
+
+  </head>
+
+  <body>  	
+
+<div class="box">
+
+  <img src="lm.jpg" alt="" class="box-img">
+
+  <h1>
+
+LAXMI MAHARA</h1>
+
+<h5 c>
+
+Title</h5>
+
+<p>
+
+address: kanchanpur, Nepal
+email:maharalaxmi25@gmail.com </p>
+
+<ul>
+Connect with:
+<li><a href="http://www.facebook.com/laxmi.mahara.3150">facebook</a></li>
+
+</ul>
+
+</div>
+
+<div style="display: none;" class="abc">
+
+ <br><br>Created By: <a href="https://www.suntos.com.np/web-bootcamp/#don%E2%80%99t-let-your-technology-tools-use-you">Web Boot-Camp</a>
+
+</div>
+
+</body>
+
+
+
+<style type="text/cssa
+	body{
+
+  margin: 0;
+
+  padding: 0;
+
+  background: url(bg.jpg) no-repeat;
+
+  background-size: cover;
+
+}
+
+.box{
+
+  width: 450px;
+
+  background: rgba(0, 0, 0, 0.4);
+
+  padding: 40px;
+
+  text-align: center;
+
+  margin: auto;
+
+  margin-top: 5%;
+
+  color: white;
+
+  font-family: 'Century Gothic',sans-serif;
+
+}
+
+.box-img{
+
+  border-radius: 50%;
+
+  width: 200px;
+
+  height: 200px;
+
+}
+
+.box h1{
+
+  font-size: 40px;
+
+  letter-spacing: 4px;
+
+  font-weight: 100;
+
+}
+
+.box h5{
+
+  font-size: 20px;
+
+  letter-spacing: 3px;
+
+  font-weight: 100;
+
+}
+
+.box p{
+
+  text-align: justify;
+
+}
+
+ul{
+
+  margin: 0;
+
+  padding: 0;
+
+}
+
+.box li{
+
+  display: inline-block;
+
+  margin: 6px;
+
+  list-style: none;
+
+}
+
+.box li a{
+
+  color: white;
+
+  text-decoration: none;
+
+  font-size: 60px;
+
+  transition: all ease-in-out 250ms;
+
+}
+
+.box li a:hover{
+
+  color: green;
+
+}
+
+.abc{
+
+	float: right;
+
+	color: red;
+
+}
+
+.abc a{
+
+	float: right;
+
+	color: red;
+
+}
+
+
+
 </style>
 
-<article>
-    <h1>Website is comming soon!</h1>
-    <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing development at the moment.</p>
-<p>Template From : <a href="https://www.suntos.com.np/web-bootcamp/"> Web boot-camp</a> </p>
+</html>
 
-    </div>
-</article>
