--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
   <head>
@@ -6,36 +7,37 @@
 
     
 
-    <title>laxmimahara</title>
+    <title>laxmi mahara</title>
 
   </head>
 
-  <body>  	
+  <body>    
 
 <div class="box">
 
-  <img src="lm.jpg" alt="" class="box-img">
+  <img src="lm.jpg"  class="box-img" width="1000" height="1000">
 
   <h1>
+    LAXMI MAHARA
 
-LAXMI MAHARA</h1>
+</h1>
 
 <h5 c>
-	Intro
 
-</h5>
+Intro</h5>
 
-<p>
-
-address: kanchanpur, Nepal
-email:maharalaxmi25@gmail.com </p>
+<p><ul>
+<li>Laxmi Mahara</li>
+<li>Address: kanchanpur,Nepal</li>
+<li>Email:maharalaxmi25@gmail.com</li>
+  </ul>
+</p>
 
 <ul>
-Connect with:
-<li><a href="http://www.facebook.com/laxmi.mahara.3150">facebook</a></li>
 
+<li><a href="http://www.facebook.com/laxmi.mahara.3150"> Facebook</a></li>
+<center><b><i> MAINTENANCE IS ON PROGRESS</i></b></center>
 </ul>
-
 </div>
 
 <div style="display: none;" class="abc">
@@ -44,11 +46,14 @@ Connect with:
 
 </div>
 
-</body>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+
+</html>
 
 
 
-<style type="text/cssa
+<style type="text/css">
+
 	body{
 
   margin: 0;
@@ -174,4 +179,5 @@ ul{
 </style>
 
 </html>
+
 
